--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ nav a:hover{
     display: none;
 }
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 500px) {
     nav{
         display: block;
         position: relative;
@@ -163,6 +163,7 @@ nav a:hover{
         display: flex;
         align-items: center;
         font-size: 15px;
+        margin: 0px auto;
     }
     .menu{
         margin-top: 15px;
@@ -177,5 +178,15 @@ nav a:hover{
         position: absolute;
         top: 22px;
         right: 20px;
+    }
+
+
+    .maincon{
+        margin: 0px auto;
+        padding: 0px auto;
+        height: 100%;
+        background-image: linear-gradient(rgba(218, 204, 204, 0.6), rgba(156, 27, 27, 0.6)), url('Images/Background.png');
+        background-size: cover;
+        background-position: fixed;
     }
 }
