--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ nav a:hover{
     .maincon{
         margin: 0px auto;
         padding: 0px auto;
+	width: auto;
         height: 100%;
         background-image: linear-gradient(rgba(218, 204, 204, 0.6), rgba(156, 27, 27, 0.6)), url('Images/Background.png');
         background-size: cover;
