--- a/style.css
+++ b/style.css
@@ -20,90 +20,83 @@ a, a:hover{
     background-position: center;
     text-align: center;
 }
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .container{
     height: 80vh;
+    width: 30%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     align-items:center;
     justify-content: center;
 }
+
 .caption{
     position: absolute;
 	width: 200px;
 	height: 20px;
     padding: 0px;
-    margin-top: 14rem;
+    margin-top: 12rem;
     color: #d3d3d3;
     margin-right: 10rem;
     font-size: 25px;
     font-family: 'Arial';
 }
-.submit-btn {
-    border:3px solid rgba(255, 255, 255, 0.726);
-    background-color:transparent;
-    width: 10%;
-    padding: 10px 8px;
-    color: white;
-    font-weight: bolder;
-    text-transform: uppercase;
-    cursor: pointer;
-    margin: 10px 100px;
-    border-radius: 20px;
-    position: relative;
-    top: -200px;
-}
-.submit-btn:hover {
-    background-color: rgba(252, 55, 55, 0.616);
-}
-.btnfacu{
-    display: block;
-    margin: auto; 
-    border:3px solid rgba(255, 255, 255, 0.726);
-    background-color:transparent;
-    width: 10%;
-    padding: 10px 8px;
-    color: white;
-    font-weight: bolder;
-    text-transform: uppercase;
-    cursor: pointer;
-    border-radius: 20px;
-    position: relative;
-    top: -200px;
-}
-.btnfacu:hover{
-    background-color: rgba(252, 55, 55, 0.616);
-}
-a{
-    text-decoration: none;
-    display: inline-block;
+
+.BTN{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
+.Stud-btn{
+    border:3px solid rgba(255, 255, 255, 0.726);
+    margin-top: 58rem;
+    background-color:transparent;
+    width: 18%;
+    padding: 6px 14px;
+    color: white;
+    font-weight: bolder;
+    text-transform: uppercase;
+    cursor: pointer;
+    border-radius: 20px;
+    position: absolute;
+}
 
-/*
-.top-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 25px;
-    background: #ef4b3f; 
+.Stud-btn:hover {
+    background-color: rgba(252, 55, 55, 0.616);
 }
-.top-bar span{
-    color: #fff;
+
+.Facu-btn{
+    margin-top: 64rem;
+    border:3px solid rgba(255, 255, 255, 0.726);
+    background-color:transparent;
+    width: 18%;
+    padding: 6px 14px;
+    color: white;
+    font-weight: bolder;
+    text-transform: uppercase;
+    cursor: pointer;
+    border-radius: 20px;
+    position: absolute;
 }
-.top-bar ul{
-    list-style: none;
-    display: flex;
+
+.Facu-btn:hover{
+    background-color: rgba(252, 55, 55, 0.616);
 }
-.top-bar li{
-    margin: 0px 5px;
-}
-.top-bar a{
-    color: #fff;
-}
-.top-bar a:hover{
-    color: #222;
-}
-*/
+
+a{
+    text-decoration: none;
+    display: inline-block;  
+} 
 
 nav{
     background: rgb(31, 25, 25);
@@ -153,7 +146,7 @@ nav a:hover{
     display: none;
 }
 
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
     nav{
         display: block;
         position: relative;
@@ -163,7 +156,6 @@ nav a:hover{
         display: flex;
         align-items: center;
         font-size: 15px;
-        margin: 0px auto;
     }
     .menu{
         margin-top: 15px;
@@ -179,15 +171,44 @@ nav a:hover{
         top: 22px;
         right: 20px;
     }
-
-
-    .maincon{
-        margin: 0px auto;
-        padding: 0px auto;
-	width: auto;
-        height: 100%;
-        background-image: linear-gradient(rgba(218, 204, 204, 0.6), rgba(156, 27, 27, 0.6)), url('Images/Background.png');
-        background-size: cover;
-        background-position: fixed;
+    .caption{ 
+        position: absolute; 
+        width: 200px;
+	    height: 20px;
+        padding: 0px;
+        margin-top: 6rem;
+        color: #d3d3d3;
+        margin-right: 2rem;
+        font-size: 20px;
+        font-family: 'Arial';
+    }
+    .Stud-btn{
+        border:3px solid rgba(255, 255, 255, 0.726);
+        margin-top: 40rem;
+        background-color:transparent;
+        width: 20%;
+        padding: 6px 14px;
+        color: white;
+        font-weight: bolder;
+        text-transform: uppercase;
+        cursor: pointer;
+        border-radius: 20px;
+        position: absolute;
+        font-size: 14px;
+    }
+    .Facu-btn{
+        margin-top: 46rem;
+        border:3px solid rgba(255, 255, 255, 0.726);
+        background-color:transparent;
+        width: 20%;
+        padding: 6px 14px;
+        color: white;
+        font-weight: bolder;
+        text-transform: uppercase;
+        cursor: pointer;
+        border-radius: 20px;
+        position: absolute;
+        font-size: 14px;
     }
 }
+
